# semantic3dnet

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
lib/point_cloud_util/: CMakeLists.txt  box3D.cpp  box3D.h  data_loader_constants.h  data_loader_wrapper.cpp  data_loader_wrapper.h  point_cloud_util.cpp  point_cloud_util.h  voxel_grid3D.cpp  voxel_grid3D.h
src/: CMakeLists.txt  confusion_matrix.py  launch_prediction.sh  launch_training.sh  loader_ffi.lua  point_cloud_constants.lua  point_cloud_error_calculation.lua  point_cloud_loader.lua  point_cloud_main.cpp  point_cloud_model_definition.lua  prepare_to_submit.sh  print_quality_report.lua  small_train.lua  test_ffi.lua  test_model.lua  train_point_cloud.lua
